<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainViewModel"
            type="org.kjh.mypracticeprojects.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_mypage_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cl_mypage_container"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cl_mypage_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_profileImg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="20dp"
                        app:shapeAppearanceOverlay="@style/Circle"
                        app:strokeColor="@color/white"
                        app:strokeWidth="2dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:imgUrl="@{mainViewModel.myUserData.successData().profileImg}" />

                    <LinearLayout
                        android:id="@+id/ll_contentCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="@+id/iv_profileImg"
                        app:layout_constraintStart_toEndOf="@+id/iv_profileImg"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_profileImg"
                        app:layout_constraintEnd_toStartOf="@+id/ll_followingCount">

                        <TextView
                            android:id="@+id/tv_postCount"
                            style="@style/Text20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{Integer.toString(mainViewModel.myUserData.successData().postCount)}" />

                        <TextView
                            style="@style/Text15"
                            android:textColor="@color/sub_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_followingCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toEndOf="@+id/ll_contentCount"
                        app:layout_constraintTop_toTopOf="@+id/ll_contentCount"
                        app:layout_constraintEnd_toStartOf="@+id/ll_followCount">

                        <TextView
                            android:id="@+id/tv_followingCount"
                            style="@style/Text20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{Integer.toString(mainViewModel.myUserData.successData().followingCount)}"/>

                        <TextView
                            style="@style/Text15"
                            android:textColor="@color/sub_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_followCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toEndOf="@+id/ll_followingCount"
                        app:layout_constraintTop_toTopOf="@+id/ll_followingCount"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/tv_followCount"
                            style="@style/Text20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{Integer.toString(mainViewModel.myUserData.successData().followCount)}" />

                        <TextView
                            style="@style/Text15"
                            android:textColor="@color/sub_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follow" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_editProfile"
                        android:text="@string/edit_profile"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        style="@style/BtnStrokePurpleCorner_Large"
                        app:layout_constraintTop_toBottomOf="@+id/iv_profileImg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabMode="fixed"/>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>